--- a/app/assets/javascripts/app/accounts.js.coffee.erb
+++ b/app/assets/javascripts/app/accounts.js.coffee.erb
@@ -3,12 +3,11 @@ app = angular.module 'accounts', ['ui.bootstrap']
 app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $http, $uibModal) ->
   _self = this
   @types = ['Asset', 'Liability', 'Equity', 'Income', 'Expense']
-  @accounts = []
   @displayRecords = []
   @byType = (type, options) ->
     return [] unless type
     type = type.toLowerCase()
-    c = _.chain _self.accounts
+    c = _.chain $scope.accounts
     c = c.filter (a) ->
       a.account_type == type
     if options && options.except
@@ -29,7 +28,7 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
       scope: $scope
     }
   @edit = (id) ->
-    _self.formAccount = _.chain(_self.accounts).filter((a) -> a.id == id).first().value()
+    _self.formAccount = _.chain($scope.accounts).filter((a) -> a.id == id).first().value()
     modalInstance = $uibModal.open {
       animation: true,
       templateUrl: 'account-form.html',
@@ -37,36 +36,18 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
       scope: $scope
     }
 
-  # Load the account list when the account manager is displayed
-  $scope.$watch 'selectedSearchHandler', (handler) ->
-    return unless handler && handler.key == 'account-manager'
-    _self.loadAccounts()
-
-  $scope.$watch 'currentEntity', (entity) ->
-    return unless entity
-    _self.loadAccounts()
+  $scope.$watch 'accounts', (accounts) ->
+    _self.createDisplayRecords(accounts)
 
   $scope.save = ->
     if !!_self.formAccount.id then _self.update() else _self.create()
 
-  @loadAccounts = ->
-    if $scope.currentEntity
-      url = "/entities/#{$scope.currentEntity.id}/accounts.json"
-      $http.get(url).then (response) ->
-        _self.setAccounts response.data
-      , (error) ->
-        # TODO show the error to the user
-        console.log "Unable to get the accounts from the service."
-        console.log error
-    else
-      _self.setAccounts []
-
   @update = ->
     url = "accounts/#{_self.formAccount.id}.json"
     $http.put(url, _self.formAccount).then (result) ->
-      updated = _.map _self.accounts, (a) ->
+      updated = _.map $scope.accounts, (a) ->
         if a.id == result.id then result else a
-      _self.setAccounts updated
+      $scope.accounts = updated
     , (error) ->
       #TODO Show the error to the user
       console.log "Unable to save the updated account"
@@ -75,7 +56,7 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
   @create = ->
     url = "entities/#{$scope.currentEntity.id}/accounts.json"
     $http.post(url, _self.formAccount).then (result) ->
-      _self.setAccounts result.data
+      $scope.accounts = result.data
       true
     , (error) ->
       #TODO show an error to the user
@@ -85,21 +66,17 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
 
   @delete = (id) ->
     $http.delete("accounts/#{id}.json").then ->
-      updated = _.reject _self.accounts, (a) ->
+      updated = _.reject $scope.accounts, (a) ->
         a.id == id
-      _self.setAccounts updated
+      $scope.accounts = updated
     , (error) ->
       #TODO Show this error as an alert
       console.log "Unable to delete the account"
       console.log error
 
-  @setAccounts = (accounts) ->
-    _self.accounts = accounts
-    _self.createDisplayRecords()
-
-  @createDisplayRecords = ->
+  @createDisplayRecords = (accounts) ->
     _self.displayRecords = _.chain(_self.types).reduce( (list, type) ->
-      groupedAccounts = _.groupBy _self.accounts, 'account_type'
+      groupedAccounts = _.groupBy accounts, 'account_type'
       # Calculate the summary header
       typedAccounts = _.sortBy groupedAccounts[type.toLowerCase()], 'path'
       typeTotal = _.chain(typedAccounts).filter( (a) ->
