--- a/app/assets/javascripts/app/accounts.js.coffee.erb
+++ b/app/assets/javascripts/app/accounts.js.coffee.erb
@@ -36,7 +36,7 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
       scope: $scope
     }
 
-  $scope.$watch 'accounts', (accounts) ->
+  $scope.$watchCollection 'accounts', (accounts) ->
     _self.createDisplayRecords(accounts)
 
   $scope.save = ->
@@ -56,7 +56,7 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
   @create = ->
     url = "entities/#{$scope.currentEntity.id}/accounts.json"
     $http.post(url, _self.formAccount).then (result) ->
-      $scope.accounts = result.data
+      $scope.accounts.push(result.data)
       true
     , (error) ->
       #TODO show an error to the user
