clean up current entity logic
Remove currentEntity, always use currentEntityId
Simplify $watch usage

--- a/app/assets/javascripts/app/accounts.js.coffee.erb
+++ b/app/assets/javascripts/app/accounts.js.coffee.erb
@@ -55,7 +55,7 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
       console.log error
 
   @create = ->
-    url = "entities/#{$scope.currentEntity.id}/accounts.json"
+    url = "entities/#{$scope.currentEntityId}/accounts.json"
     $http.post(url, _self.formAccount).then (result) ->
       $scope.accounts.push(result.data)
       true
