--- a/app/assets/javascripts/app/register.js.coffee.erb
+++ b/app/assets/javascripts/app/register.js.coffee.erb
@@ -5,19 +5,31 @@ app.controller 'AccountRegisterController', ['$scope', '$http', '$uibModal', ($s
   @transactionItems = []
   @accountId = null
   @accountName = null
+  @new = ->
+    $scope.formTransaction = {
+      transaction_date: new Date(new Date().toDateString()),
+      items: [
+        {account_id: _self.accountId},
+        {}
+      ]
+    }
+    _self.openModal()
   @edit = (item) ->
     $http.get("/transactions/#{item.transaction_id}.json").then (response) ->
       $scope.formTransaction = response.data
-      $uibModal.open {
-        animation: true,
-        templateUrl: '<%= asset_path('transaction-form.html') %>',
-        controller: 'TransactionFormController',
-        size: 'lg',
-        scope: $scope
-      }
+      _self.openModal()
     , (error) ->
       console.log "Unable to get the transaction from the server."
       console.log error
+  @openModal = ->
+    $uibModal.open({
+      animation: true,
+      templateUrl: '<%= asset_path('transaction-form.html') %>',
+      controller: 'TransactionFormController',
+      size: 'lg',
+      scope: $scope
+    }).result.then ->
+      _self.loadTransactionItems()
   @loadTransactionItems = ->
     $http.get("/accounts/#{_self.accountId}/transaction_items.json").then( (response) ->
       _self.transactionItems = response.data
