--- a/app/views/layouts/app.html.haml
+++ b/app/views/layouts/app.html.haml
@@ -8,6 +8,7 @@
     %meta{:content => "", :name => "description"}/
     %meta{:content => "", :name => "author"}/
     %title Money
+    =favicon_link_tag asset_path('money_bag.ico')
     =stylesheet_link_tag 'application', media: :all
     =javascript_include_tag 'app'
     =csrf_meta_tags
