--- a/app/assets/templates/account-manager.html.haml
+++ b/app/assets/templates/account-manager.html.haml
@@ -4,21 +4,22 @@
       %button.close{ 'data-dismiss' => 'modal', 'aria-hidden' => 'true' } &times;
       %h3.modal-title New account
     .modal-body
-      %form
+      %form.css-form{ :name => 'accountForm', :novalidate => true }
+        .form-group{ 'ng-class' => '{"has-error": accountForm.name.$dirty && accountForm.name.$invalid}' }
+          %label.control-label{ :for => 'account_name' } Name
+          %input.form-control{ :type => 'text', :name => 'name', 'ng-model' => 'accountsCtrl.formAccount.name', 'focus-on' => '!!accountsCtrl.formAccount', :required => true, :placeholder => 'Checking, for example' }
+          %span.help-block{ 'ng-show' => 'accountForm.name.$dirty && accountForm.name.$error.required' } You must specify a name.
         .form-group
-          %label{ :for => 'account_name' } Name
-          %input.form-control{ :type => 'text', :id => 'account_name', :name => 'account_name', 'ng-model' => 'accountsCtrl.formAccount.name', 'focus-on' => '!!accountsCtrl.formAccount' }
-        .form-group
-          %label{ :for => 'account_type' } Type
-          %select.form-control{ :id => 'account_type', :name => 'account_type', 'ng-model' => 'accountsCtrl.formAccount.account_type' }
+          %label.form-label{ :for => 'account_type' } Type
+          %select.form-control{ :name => 'account_type', 'ng-model' => 'accountsCtrl.formAccount.account_type' }
             %option{ 'ng-repeat' => 'type in accountsCtrl.types', :value => '{{ type.toLowerCase() }}' } {{ type }}
         .form-group
-          %label{ :for => 'account_parent' } Parent
+          %label.form-label{ :for => 'account_parent' } Parent
           %select.form-control{ :id => 'account_parent', :name => 'account_parent', 'ng-model' => 'accountsCtrl.formAccount.parent_id', 'convert-to-number' => 'true' }
             %option{ :value => '' } None
             %option{ 'ng-repeat' => 'account in accountsCtrl.formTypes({ except: accountsCtrl.formAccount.id })', :value => '{{ account.id }}' } {{ account.path }}
     .modal-footer
-      %button.btn.btn-primary{ 'ng-click' => 'ok()' } Save
+      %button.btn.btn-primary{ 'ng-click' => 'ok()', 'ng-disabled' => 'accountForm.$invalid' } Save
       %button.btn.btn-default{ 'ng-click' => 'cancel()' } Cancel
   .row
     .col-md-6
