--- a/app/views/transaction_items/index.html.haml
+++ b/app/views/transaction_items/index.html.haml
@@ -1,33 +1,39 @@
 =content_for :page_title do
   #{h @account.name} Transaction items
 
--if @account.commodities?
-  %ul.nav.nav-tabs
-    %li{role: 'presentation'}= link_to 'Holdings', holdings_account_path(@account), title: 'Click here to view holdings for this account.'
-    %li.active{role: 'presentation'}= link_to 'Transactions', account_transaction_items_path(@account), title: 'Click here to view transaction items for this account.'
+.row
+  .col-md-12
+    -if @account.commodities?
+      %ul.nav.nav-tabs
+        %li{role: 'presentation'}= link_to 'Holdings', holdings_account_path(@account), title: 'Click here to view holdings for this account.'
+        %li.active{role: 'presentation'}= link_to 'Transactions', account_transaction_items_path(@account), title: 'Click here to view transaction items for this account.'
 
-%table#transaction_items_table.table.table-striped
-  %tr
-    %th.col-md-1.transaction_date_cell Date
-    %th.col-md-3.description_cell Description
-    %th.col-md-3.account_cell Account
-    %th.col-md-1.reconciled_cell Rec.
-    %th.col-md-1.amount_cell.number_column Amount
-    %th.col-md-1.balance_cell.number_column Balance
-    %th.col-md-1.actions &nbsp;
-  -@transaction_items.each_with_index do |item, index|
-    %tr
-      %td.transaction_date_cell= format_date(item.transaction_date)
-      %td.description_cell= item.owning_transaction.description
-      %td.account_cell= other_account(item)
-      %td.reconciled_cell.check_column= item.reconciled? ? 'X' : ''
-      %td.amount_cell.number_column= format_currency(item.polarized_amount)
-      %td.balance_cell.number_column= format_currency(item.balance)
-      %td.actions
-        .btn-group
-          =edit_link edit_transaction_item_path(item), 'this transaction'
-          =delete_link transaction_item_path(item), 'this transaction'
-.actions.btn-group
-  =link_to 'Add', new_account_transaction_item_path(@account), class: 'btn btn-primary', title: 'Click here to add a transaction.'
-  =link_to 'Back', entity_accounts_path(@account.entity), class: 'btn btn-default', title: 'Click here to return to the account list.'
-  =link_to 'Reconcile', new_account_reconciliation_path(@account), class: 'btn btn-default', title: 'Click here to reconcile this account against a statement.'
+    %table#transaction_items_table.table.table-striped
+      %tr
+        %th.col-md-1.transaction_date_cell Date
+        %th.col-md-3.description_cell Description
+        %th.col-md-3.account_cell Account
+        %th.col-md-1.reconciled_cell Rec.
+        %th.col-md-1.amount_cell.number_column Amount
+        %th.col-md-1.balance_cell.number_column Balance
+        %th.col-md-1.actions &nbsp;
+      -@transaction_items.each_with_index do |item, index|
+        %tr
+          %td.transaction_date_cell= format_date(item.transaction_date)
+          %td.description_cell= item.owning_transaction.description
+          %td.account_cell= other_account(item)
+          %td.reconciled_cell.check_column= item.reconciled? ? 'X' : ''
+          %td.amount_cell.number_column= format_currency(item.polarized_amount)
+          %td.balance_cell.number_column= format_currency(item.balance)
+          %td.actions
+            .btn-group
+              =edit_link edit_transaction_item_path(item), 'this transaction'
+              =delete_link transaction_item_path(item), 'this transaction'
+
+.row
+  .col-md-6
+    =link_to 'Add', new_account_transaction_item_path(@account), class: 'btn btn-primary', title: 'Click here to add a transaction.'
+    =link_to 'Back', entity_accounts_path(@account.entity), class: 'btn btn-default', title: 'Click here to return to the account list.'
+    =link_to 'Reconcile', new_account_reconciliation_path(@account), class: 'btn btn-default', title: 'Click here to reconcile this account against a statement.'
+  .col-md-6.text-right
+    =will_paginate @transaction_items, renderer: BootstrapPagination::Rails
