add transaction item index to account register

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -25,6 +25,11 @@
 .register {
   width: 640px;
 }
+.register-index {
+  width: 64px;
+  text-align: right;
+  color: #999;
+}
 .register-date {
   width: 64px;
   text-align: right;
