--- a/app/assets/javascripts/app/accounts.js.coffee.erb
+++ b/app/assets/javascripts/app/accounts.js.coffee.erb
@@ -3,7 +3,7 @@ app = angular.module 'accounts', ['ui.bootstrap']
 app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $http, $uibModal) ->
   _self = this
   @types = ['Asset', 'Liability', 'Equity', 'Income', 'Expense']
-  @displayRecords = []
+  $scope.displayRecords = []
   @byType = (type, options) ->
     return [] unless type
     type = type.toLowerCase()
@@ -76,7 +76,7 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
       console.log error
 
   @createDisplayRecords = (accounts) ->
-    _self.displayRecords = _.chain(_self.types).reduce( (list, type) ->
+    $scope.displayRecords = _.chain(_self.types).reduce( (list, type) ->
       groupedAccounts = _.groupBy accounts, 'account_type'
       # Calculate the summary header
       typedAccounts = _.sortBy groupedAccounts[type.toLowerCase()], 'path'
@@ -85,28 +85,73 @@ app.controller 'AccountsController', ['$scope', '$http', '$uibModal', ($scope, $
       ).reduce((sum, account) ->
         sum + account.value + account.children_value
       , 0).value()
-      list.push {
-        caption: type,
-        balance: typeTotal,
-        isHeader: true,
-        cssClass: null
-      }
+      list.push new HeaderDisplayRecord(type, typeTotal)
 
       # transform the accounts into display records
       _.each typedAccounts, (account) ->
-        list.push {
-          id: account.id,
-          caption: account.name,
-          balance: account.value + account.children_value,
-          isHeader: false,
-          cssClass: "account_depth_#{account.depth}"
-        }
+        list.push new AccountDisplayRecord(account, $scope)
 
       list
     , []).value()
 
   return
 ]
+
+AccountDisplayRecord = (account, scope) ->
+  _self = this
+  @isExpanded = false
+  @isHidden = account.parent_id != null
+  @account = account
+  @scope = scope
+  @id = -> @account.id
+  @caption = -> @account.name
+  @balance = -> @account.value + @account.children_value
+  @isHeader = -> false
+  @isLeaf = -> _.every(@scope.accounts, (a) -> a.parent_id != _self.account.id)
+  @cssClass = ->"account_depth_#{@account.depth}"
+  @_childRecords = ->
+    _.chain(@scope.accounts).filter((a) ->
+      a.parent_id == _self.account.id
+    ).map((a) ->
+
+      console.log "account: #{account.name}"
+
+      _self.scope.displayRecords.find((r) -> r.id() == a.id)
+    ).value()
+  @expand = ->
+    _.each(_self._childRecords(), (a) ->
+      a.isHidden = false
+    )
+    @isExpanded = true
+    return
+  @collapse = ->
+    _.each(_self._childRecords(), (a) ->
+      a.isHidden = true
+    )
+    @isExpanded = false
+    return
+  return
+
+class HeaderDisplayRecord
+  constructor: (type, total) ->
+    @type = type
+    @total = total
+  id: ->
+    null
+  caption: ->
+    @type
+  balance: ->
+    @total
+  isHeader: ->
+    true
+  isLeaf: ->
+    false
+  isExpanded: ->
+    true
+  hidden: ->
+    false
+  cssClass: ->
+    null
 
 app.controller 'AccountFormController', ['$scope', '$uibModalInstance', ($scope, $uibModalInstance) ->
   $scope.ok = ->
