--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,9 +1,13 @@
-%h2 Forgot your password?
-= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
-  = devise_error_messages!
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email, :autofocus => true
-  %div= f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+=content_for :page_title do
+  Forgot your password?
+.row
+  .col-md-4
+    = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
+      = devise_error_messages!
+      .form-group
+        = f.label :email, class: 'form-label'
+        = f.email_field :email, autofocus: true, class: 'form-control'
+      .actions
+        = f.submit "Send me reset password instructions", class: 'btn btn-primary'
+  .col-md-4.col-md-offset-4
+    = render "devise/shared/links"
