--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,17 +1,19 @@
-%h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email, :autofocus => true
-  %div
-    = f.label :password
-    %br/
-    = f.password_field :password
-  %div
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %div= f.submit "Sign up"
-= render "devise/shared/links"
+=content_for :page_title do
+  Sign up
+.row
+  .col-md-4
+    = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      .form-group
+        = f.label :email, class: 'form-label'
+        = f.email_field :email, autofocus: true, class: 'form-control'
+      .form-group
+        = f.label :password, class: 'form-label'
+        = f.password_field :password, class: 'form-control'
+      .form-group
+        = f.label :password_confirmation, class: 'form-label'
+        = f.password_field :password_confirmation, class: 'form-control'
+      .actions
+        = f.submit "Sign up", class: 'btn btn-primary'
+  .col-md-4.col-md-offset-4
+    = render "devise/shared/links"
