--- a/app/views/transaction_items/index.html.haml
+++ b/app/views/transaction_items/index.html.haml
@@ -4,8 +4,12 @@
 .row
   .col-md-12
     -if @account.commodities?
-      %ul.nav.nav-tabs
+      %ul#account_menu.nav.nav-tabs
         %li{role: 'presentation'}= link_to 'Holdings', holdings_account_path(@account), title: 'Click here to view holdings for this account.'
+        %li.active{role: 'presentation'}= link_to 'Transactions', account_transaction_items_path(@account), title: 'Click here to view transaction items for this account.'
+    -elsif @account.commodity?
+      %ul#account_menu.nav.nav-tabs
+        %li{role: 'presentation'}= link_to 'Lots', account_lots_path(@account), title: 'Click here to view lots for this commodity.'
         %li.active{role: 'presentation'}= link_to 'Transactions', account_transaction_items_path(@account), title: 'Click here to view transaction items for this account.'
 
     %table#transaction_items_table.table.table-striped
