--- a/app/views/layouts/app.html.haml
+++ b/app/views/layouts/app.html.haml
@@ -9,7 +9,7 @@
     %meta{:content => "", :name => "author"}/
     %title Money
     =favicon_link_tag asset_path('money_bag.ico')
-    =stylesheet_link_tag 'application', media: :all
+    =stylesheet_link_tag 'app', media: :all
     =javascript_include_tag 'app'
     =csrf_meta_tags
 %body{ 'ng-controller' => 'EntitiesController as entitiesCtrl' }
