--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,11 +12,10 @@
     =stylesheet_link_tag 'application', media: :all
     =stylesheet_link_tag params[:controller], media: :all
     =javascript_include_tag 'application'
-    =javascript_include_tag params[:controller]
     =csrf_meta_tags
 %body
   %nav.navbar.navbar-inverse.navbar-fixed-top
-    .container
+    .container-fluid
       .navbar-header
         %button.navbar-toggle.collapsed{"aria-controls" => "navbar", "aria-expanded" => "false", "data-target" => "#navbar", "data-toggle" => "collapse", :type => "button"}
           %span.sr-only Toggle navigation
